--- a/Terminal/settings.json
+++ b/Terminal/settings.json
@@ -1,88 +1,12 @@
 {
     "$help": "https://aka.ms/terminal-documentation",
     "$schema": "https://aka.ms/terminal-profiles-schema-preview",
-    "actions": 
-    [
-        {
-            "command": 
-            {
-                "action": "copy",
-                "singleLine": false
-            },
-            "id": "User.copy.644BA8F2"
-        },
-        {
-            "command": 
-            {
-                "action": "newTab"
-            },
-            "id": "User.newTab.5DEADB41"
-        },
-        {
-            "command": "paste",
-            "id": "User.paste"
-        },
-        {
-            "command": 
-            {
-                "action": "splitPane",
-                "split": "auto",
-                "splitMode": "duplicate"
-            },
-            "id": "User.splitPane.A6751878"
-        },
-        {
-            "command": "find",
-            "id": "User.find"
-        },
-        {
-            "command": "closePane",
-            "id": "User.closePane"
-        },
-        {
-            "command": 
-            {
-                "action": "splitPane",
-                "split": "right",
-                "splitMode": "duplicate"
-            },
-            "id": "User.splitPane.FEF0D40B"
-        },
-        {
-            "command": 
-            {
-                "action": "splitPane",
-                "split": "down",
-                "splitMode": "duplicate"
-            },
-            "id": "User.splitPane.10B260D2"
-        }
-    ],
-    "copyFormatting": "all",
+    "actions": [],
+    "copyFormatting": "none",
     "copyOnSelect": false,
     "defaultProfile": "{574e775e-4f2a-5b96-ac1e-a2962a402336}",
     "keybindings": 
     [
-        {
-            "id": null,
-            "keys": "alt+shift+minus"
-        },
-        {
-            "id": "User.copy.644BA8F2",
-            "keys": "ctrl+c"
-        },
-        {
-            "id": "User.paste",
-            "keys": "ctrl+v"
-        },
-        {
-            "id": "User.find",
-            "keys": "ctrl+shift+f"
-        },
-        {
-            "id": null,
-            "keys": "ctrl+shift+w"
-        },
         {
             "id": null,
             "keys": "alt+shift+plus"
@@ -92,24 +16,52 @@
             "keys": "ctrl+shift+t"
         },
         {
-            "id": "User.splitPane.10B260D2",
-            "keys": "ctrl+minus"
+            "id": "Terminal.PasteFromClipboard",
+            "keys": "ctrl+v"
         },
         {
-            "id": "User.splitPane.A6751878",
-            "keys": "alt+shift+d"
+            "id": null,
+            "keys": "ctrl+shift+f"
         },
         {
-            "id": "User.newTab.5DEADB41",
+            "id": null,
+            "keys": "ctrl+shift+w"
+        },
+        {
+            "id": "Terminal.OpenNewTab",
             "keys": "ctrl+t"
         },
         {
-            "id": "User.closePane",
-            "keys": "ctrl+w"
+            "id": "Terminal.CopyToClipboard",
+            "keys": "ctrl+c"
         },
         {
-            "id": "User.splitPane.FEF0D40B",
+            "id": null,
+            "keys": "alt+shift+minus"
+        },
+        {
+            "id": "Terminal.DuplicatePaneAuto",
+            "keys": "alt+shift+d"
+        },
+        {
+            "id": "Terminal.SplitPaneDown",
+            "keys": "ctrl+minus"
+        },
+        {
+            "id": null,
+            "keys": "ctrl+plus"
+        },
+        {
+            "id": "Terminal.SplitPaneRight",
             "keys": "ctrl+\\"
+        },
+        {
+            "id": "Terminal.FindText",
+            "keys": "ctrl+f"
+        },
+        {
+            "id": "Terminal.ClosePane",
+            "keys": "ctrl+w"
         }
     ],
     "newTabMenu": 
@@ -126,50 +78,68 @@
             {
                 "face": "SauceCodePro Nerd Font"
             },
-            "startingDirectory": "%USERPROFILE%\\source\\repos\\"
+            "startingDirectory": "%USERPROFILE%\\Source\\Repos"
         },
         "list": 
         [
-            {
-                "commandline": "%SystemRoot%\\System32\\WindowsPowerShell\\v1.0\\powershell.exe",
-                "guid": "{61c54bbd-c2c6-5271-96e7-009a87ff44bf}",
-                "hidden": false,
-                "name": "Windows PowerShell"
-            },
-            {
-                "commandline": "%SystemRoot%\\System32\\cmd.exe",
-                "guid": "{0caa0dad-35be-5f56-a8ff-afceeeaa6101}",
-                "hidden": false,
-                "name": "Command Prompt"
-            },
-            {
-                "font": 
-                {
-                    "face": "SauceCodePro Nerd Font"
-                },
-                "guid": "{574e775e-4f2a-5b96-ac1e-a2962a402336}",
-                "hidden": false,
-                "name": "PowerShell",
-                "source": "Windows.Terminal.PowershellCore"
-            },
-            {
-                "guid": "{b453ae62-4e3d-5e58-b989-0a998ec441b8}",
-                "hidden": false,
-                "name": "Azure Cloud Shell",
-                "source": "Windows.Terminal.Azure"
-            },
-            {
-                "guid": "{18baef22-2636-5a49-a0cb-fe1776c12aed}",
-                "hidden": false,
-                "name": "Developer Command Prompt for VS 2022",
-                "source": "Windows.Terminal.VisualStudio"
-            },
-            {
-                "guid": "{eae44929-0cd9-5368-8556-9b6baaf920a2}",
-                "hidden": false,
-                "name": "Developer PowerShell for VS 2022",
-                "source": "Windows.Terminal.VisualStudio"
-            }
+          {
+            "guid": "{574e775e-4f2a-5b96-ac1e-a2962a402336}",
+            "hidden": false,
+            "name": "PowerShell",
+            "source": "Windows.Terminal.PowershellCore"
+          },
+          {
+            "colorScheme": "Campbell",
+            "commandline": "pwsh -Command \"$env:AZURE_CONFIG_DIR = \\\"%USERPROFILE%\\.azure-gcoblegacy-prod\\\"; az account set -s sub-prd-global-gcoblegacy; pwsh\"",
+            "guid": "{c365d89a-23ac-4560-83fb-22fecad474f1}",
+            "hidden": false,
+            "icon": "ms-appx:///ProfileIcons/pwsh.png",
+            "name": "PowerShell Legacy Prod"
+          },
+          {
+            "colorScheme": "Campbell",
+            "commandline": "pwsh -Command \"$env:AZURE_CONFIG_DIR = \\\"%USERPROFILE%\\.azure-gcoblegacy-dev\\\"; az account set -s sub-dev-global-gcoblegacy; pwsh\"",
+            "guid": "{592bbbc7-3a07-4a40-aa1c-ae6970bdc3fc}",
+            "hidden": false,
+            "icon": "ms-appx:///ProfileIcons/pwsh.png",
+            "name": "PowerShell Legacy Dev"
+          },
+          {
+            "commandline": "%SystemRoot%\\System32\\WindowsPowerShell\\v1.0\\powershell.exe",
+            "guid": "{61c54bbd-c2c6-5271-96e7-009a87ff44bf}",
+            "hidden": false,
+            "name": "Windows PowerShell"
+          },
+          {
+            "commandline": "%SystemRoot%\\System32\\cmd.exe",
+            "guid": "{0caa0dad-35be-5f56-a8ff-afceeeaa6101}",
+            "hidden": false,
+            "name": "Command Prompt"
+          },
+          {
+            "guid": "{b453ae62-4e3d-5e58-b989-0a998ec441b8}",
+            "hidden": false,
+            "name": "Azure Cloud Shell",
+            "source": "Windows.Terminal.Azure"
+          },
+          {
+            "guid": "{738b5f6d-a6c9-5ed4-b065-98abf4f9b7e8}",
+            "hidden": false,
+            "name": "Developer Command Prompt for VS 2022",
+            "source": "Windows.Terminal.VisualStudio"
+          },
+          {
+            "guid": "{ed60e9aa-0370-5677-8e3f-f07f67d9089e}",
+            "hidden": false,
+            "name": "Developer PowerShell for VS 2022",
+            "source": "Windows.Terminal.VisualStudio"
+          },
+          {
+            "guid": "{2ece5bfe-50ed-5f3a-ab87-5cd4baafed2b}",
+            "hidden": false,
+            "name": "Git Bash",
+            "source": "Git"
+          }
         ]
     },
     "schemes": [],
